--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,8 @@
 
 html,
 body {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
